<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="welcome_to_whatsapp">Welcome to WhatsApp</string>
    <string name="veify_your_num">Verify Your Number</string>
    <string name="msg_text">Please enter your mobile number. You will get a SMS including a Verification Code.</string>
    <string name="Verify">" Verify +919873715683"</string>
    <string name="automatically">Waiting to automatiically detect an SMS sent to</string>
    <string name="Enter">Enter 6-Digit code</string>
    <string name="send_v_c">Send Verification Code</string>
    <string name="verfy_num">Verify %s</string>
    <string name="waiting_text">Waiting to automatically detect an SMS sent to\n %s Wrong Number ?</string>
    <string name="second_remaining">Seconds Remaining: %d</string>
    <string name="please_provide_your_name_and_a_profile_picture">Please provide your name and a Profile picture</string>
    <string name="profile_info">Profile Info</string>
    <string name="type_your_name_here">Type Your Name Here</string>
    <string name="next">Next</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="like_message">Like message</string>
    <string name="verify_number">Verify %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>