<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OtpActivity">

    <TextView
        android:id="@+id/verifying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue500"
        android:textStyle="bold|italic"
        tools:text="@string/Verify"
        android:textSize="22sp"  />

    <TextView
        android:id="@+id/waitingTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/automatically"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/counterTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="6dp"
        android:textSize="16sp"  />

    <EditText
        android:id="@+id/sendcodeET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:imeActionId="6"
        android:imeActionLabel="Send"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:letterSpacing="0.8"
        android:maxLines="1"
        android:maxLength="6"
        android:hint="------"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/Enter"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verificationBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:enabled="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/send_v_c"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:cornerRadius="6dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:gravity="center"
        android:padding="16dp"
        android:text="Resend SMS"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:cornerRadius="6dp"  />



</LinearLayout>