<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_to_whatsapp"
        android:textColor="@color/blue700"
        android:textSize="28sp"
        android:textStyle="bold|italic"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/veify_your_num"
        android:textColor="#515151"
        android:textSize="20sp"
        android:textStyle="bold"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/msg_text"
        android:textSize="16sp"  />

    <LinearLayout
        android:id="@+id/verif_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            app:ccp_contentColor="#fcfdfd"
            app:ccp_textSize="20dp"  />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:imeActionId="6"
            android:maxLength="10"
            android:imeActionLabel="Send"
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20sp"  />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="Next"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="normal"
        app:cornerRadius="5dp"  />






</LinearLayout>